<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/menu_toolbar_password_list_add"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/menu_toolbar_password_list_add"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_toolbar_password_list_setting_launch_password"
        android:title="@string/menu_toolbar_password_list_setting_launch_password"
        app:showAsAction="never"/>
    <item 
        android:id="@+id/menu_toolbar_password_list_clear_launch_password"
        android:title="@string/menu_toolbar_password_list_clear_launch_password"
        app:showAsAction="never"/>

</menu>