<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

	<include 
	    layout="@layout/view_toolbar"
	    android:id="@+id/password_toolbar">
	</include>
    
    <LinearLayout
        android:id="@+id/password_titleLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_toolbar"
        android:theme="@style/passwordFragmentLayout" >

        <TextView
            android:id="@+id/password_title_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/password_title_textLabel" />

        <EditText
            android:id="@+id/password_title_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="start" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/password_passwordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_titleLayout"
        android:theme="@style/passwordFragmentLayout" >

        <TextView
            android:id="@+id/password_password_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/password_password_textLabel" />

        <EditText
            android:id="@+id/password_password_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="start" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/password_timelockLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_passwordLayout"
        android:theme="@style/passwordFragmentLayout" >

        <TextView
            android:id="@+id/password_timelock_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_timelock_textLabel" />

        <Button
            android:id="@+id/password_datetime_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_datetime_1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/password_notesLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_timelockLayout"
        android:theme="@style/passwordFragmentLayout" >

        <TextView
            android:id="@+id/password_notes_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/password_notes_textLabel" />

        <EditText
            android:id="@+id/password_notes_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="start" />
    </LinearLayout>

</RelativeLayout>