<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <include 
        layout="@layout/view_toolbar"
        android:id="@+id/setting_launch_password_toolbar"/>
    
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_centerInParent="true"
            android:orientation="vertical">
            
            <EditText 
                android:id="@+id/setting_launch_password_old_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/settingLaunchPasswordEditText"
                android:hint="@string/setting_launch_password_old_password_hint"
                android:visibility="visible"/>
            
            <EditText 
                android:id="@+id/setting_launch_password_new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/settingLaunchPasswordEditText"
                android:hint="@string/setting_launch_password_new_password_hint"/>
            
            <EditText 
                android:id="@+id/setting_launch_password_again_new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/settingLaunchPasswordEditText"
                android:hint="@string/setting_launch_password_again_new_password_hint"/>
            
        </LinearLayout>
        
    </RelativeLayout>

</LinearLayout>
